nohup.out
Traceback (most recent call last):
  File "/home/ec2-user/chatmrpt_env/bin/gunicorn", line 8, in <module>
    sys.exit(run())
             ^^^^^
  File "/home/ec2-user/chatmrpt_env/lib64/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 67, in run
    WSGIApplication("%(prog)s [OPTIONS] [APP_MODULE]").run()
  File "/home/ec2-user/chatmrpt_env/lib64/python3.11/site-packages/gunicorn/app/base.py", line 236, in run
    super().run()
  File "/home/ec2-user/chatmrpt_env/lib64/python3.11/site-packages/gunicorn/app/base.py", line 72, in run
    Arbiter(self).run()
    ^^^^^^^^^^^^^
  File "/home/ec2-user/chatmrpt_env/lib64/python3.11/site-packages/gunicorn/arbiter.py", line 58, in __init__
    self.setup(app)
  File "/home/ec2-user/chatmrpt_env/lib64/python3.11/site-packages/gunicorn/arbiter.py", line 118, in setup
    self.app.wsgi()
  File "/home/ec2-user/chatmrpt_env/lib64/python3.11/site-packages/gunicorn/app/base.py", line 67, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/home/ec2-user/chatmrpt_env/lib64/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 58, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/home/ec2-user/chatmrpt_env/lib64/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 48, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ec2-user/chatmrpt_env/lib64/python3.11/site-packages/gunicorn/util.py", line 371, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib64/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/ec2-user/ChatMRPT/run.py", line 35, in <module>
    app = create_app(config_name)
          ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ec2-user/ChatMRPT/app/__init__.py", line 86, in create_app
    from .config import get_config
  File "/home/ec2-user/ChatMRPT/app/config/__init__.py", line 11, in <module>
    from .production import ProductionConfig
  File "/home/ec2-user/ChatMRPT/app/config/production.py", line 66
    "frame-src 'self' http://chatmrpt-alb-319454030.us-
    ^
SyntaxError: unterminated string literal (detected at line 66)

Error: Already running on PID 504444 (or pid file '/tmp/gunicorn.pid' is stale)


Error: Already running on PID 504444 (or pid file '/tmp/gunicorn.pid' is stale)


Error: Already running on PID 504860 (or pid file '/tmp/gunicorn.pid' is stale)


Error: Already running on PID 506123 (or pid file '/tmp/gunicorn.pid' is stale)


Error: Already running on PID 506370 (or pid file '/tmp/gunicorn.pid' is stale)


Error: Already running on PID 506869 (or pid file '/tmp/gunicorn.pid' is stale)

